Peer review updates

--- a/Samples/PublicSamples/EchoBot/src/EchoBot/Properties/launchSettings.json
+++ b/Samples/PublicSamples/EchoBot/src/EchoBot/Properties/launchSettings.json
@@ -1,11 +1,11 @@
-﻿{
+{
   "profiles": {
     "EchoBot": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
   }
 }
