--- a/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
+++ b/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
@@ -17,7 +17,8 @@
     <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0-beta.8700" TargetFramework="net472"/>
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.32.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0.0" />   
+    <PackageReference Include="System.Text.Json" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
