--- a/.github/workflows/echobot-build-BCCB.yml
+++ b/.github/workflows/echobot-build-BCCB.yml
@@ -1,4 +1,4 @@
-name: .NET BOT D1 BUILD BCCA
+name: .NET BOT D1 BUILD BCCB
 
 on:
   push:
@@ -6,14 +6,14 @@ on:
       - 'master'
     paths:
       - './Samples/PublicSamples/EchoBot/src/**'
-      - .github/workflows/echobot-build-BCCA.yml
+      - .github/workflows/echobot-build-BCCB.yml
 
   pull_request:
     branches:
       - 'master'
     paths:
       - './Samples/PublicSamples/EchoBot/src/**'
-      - .github/workflows/echobot-build-BCCA.yml
+      - .github/workflows/echobot-build-BCCB.yml
 
   workflow_dispatch:
 
@@ -23,7 +23,7 @@ env:
   Component:   EchoBot
   BuildName:   0.1.${{ github.run_number }}
   Environment: D1
-  OrgName:     BCCA
+  OrgName:     BCCB
   Location:    eastus2
 
 jobs:
@@ -69,7 +69,7 @@ jobs:
     - name: Login via Az module
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS_BCCA_BOT }}
+        creds: ${{ secrets.AZURE_CREDENTIALS_BCCB_BOT }}
         enable-AzPSSession: true
 
     - name: G1_RG_UploadArtifacts_to_Blob
