Fix workflow paths

--- a/.github/workflows/recording-bot-build-and-test.yml
+++ b/.github/workflows/recording-bot-build-and-test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - Samples/PublicSamples/RecordingBot
+      - Samples/PublicSamples/RecordingBot/**
 
 jobs:
 
