Update output writing

--- a/.github/workflows/recording-bot-build-and-test.yml
+++ b/.github/workflows/recording-bot-build-and-test.yml
@@ -40,11 +40,11 @@ jobs:
           $HasSrcDiff = $SrcDiff.Length -gt 0
           
           # Set the outputs
-          Write-Host "::set-output name=build::$HasBuildDiff"
-          Write-Host "::set-output name=deploy::$HasDeployDiff"
-          Write-Host "::set-output name=deploy::$HasDocsDiff"
-          Write-Host "::set-output name=scripts::$HasScriptsDiff"
-          Write-Host "::set-output name=src::$HasSrcDiff"
+          echo "build=$HasBuildDiff" >> $env:GITHUB_OUTPUT
+          echo "deploy=$HasDeployDiff" >> $env:GITHUB_OUTPUT
+          echo "docs=$HasDocsDiff" >> $env:GITHUB_OUTPUT
+          echo "scripts=$HasScriptsDiff" >> $env:GITHUB_OUTPUT
+          echo "src=$HasSrcDiff" >> $env:GITHUB_OUTPUT
 
   dotnet-build-and-test:
     runs-on: windows-2022
