--- a/.github/workflows/recording-bot-build-and-test.yml
+++ b/.github/workflows/recording-bot-build-and-test.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           # Diff latest commit with latest main commit for Recording Bot
           git fetch
-          git diff --name-only $GITHUB_BASE_REF $GITHUB_REF -- Samples/PublicSamples/RecordingBot/
-          $diff = git diff --name-only $GITHUB_BASE_REF $GITHUB_REF -- Samples/PublicSamples/RecordingBot/
+          git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- Samples/PublicSamples/RecordingBot/
+          $diff = git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- Samples/PublicSamples/RecordingBot/
           
           # Check if a file has changed (added, modified, deleted)
           $BuildDiff = $diff | Where-Object { $_ -match '^Samples/PublicSamples/RecordingBot/build/' }
