Make cert manager a dependency in Chart.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,5 @@ _site/
 appsettings.development.json
 *.development.pubxml
 *.original
+Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/charts/*
+Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.lock
