--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
@@ -22,3 +22,9 @@ version: 1.0.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 1.0.0
+
+dependencies:
+  - name: cert-manager
+    version: v1.13.2
+    repository: https://charts.jetstack.io
+    alias: cert-manager
