--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
@@ -58,3 +58,16 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+
+cert-manager:
+  namespace: cert-manager
+  installCRDs: true
+  issuerEmail: YOUR EMAIL
+  nodeSelector:
+    "kubernetes.io/os": linux
+  webhook:
+    nodeSelector:
+      "kubernetes.io/os": linux
+  caininjector:
+    nodeSelector:
+      "kubernetes.io/os": linux
