Make ingress nginx to a dependency of Chart.yaml

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/configmap.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/configmap.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ $fullName }}-tcp-services
-  namespace: ingress-nginx
+  namespace: {{ index .Values "ingress-nginx" "namespaceOverride"}}
   labels:
     helmVersion: {{ .Chart.Version }}
     helmAppVersion: {{ .Chart.AppVersion }}
