--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
@@ -28,3 +28,7 @@ dependencies:
     version: v1.13.2
     repository: https://charts.jetstack.io
     alias: cert-manager
+  - name: ingress-nginx
+    version: 4.8.3
+    repository: https://kubernetes.github.io/ingress-nginx
+    alias: ingress-nginx
