Update ingress.yaml to work with new ingress nginx

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/ingress.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- $fullName := include "fullName" . -}}
 {{- $namespace := include "namespace" . -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -26,7 +26,10 @@ spec:
   - host: {{ include "hostName" . }}
     http:
       paths:
-      - backend:
-          serviceName: {{ $fullName }}-routing
-          servicePort: 443
-        path: /
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ $fullName }}-routing
+            port:
+              number: 443
