--- a/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
+++ b/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
@@ -1,80 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net472</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <Platforms>x64</Platforms>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.Skype.Internal.Media.H264">
-      <HintPath>..\packages\microsoft.skype.bots.media\1.19.0.25-alpha\src\skype_media_lib\Microsoft.Skype.Internal.Media.H264.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Runtime.Serialization" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.EventGrid" Version="3.2.0" />
-    <PackageReference Include="NAudio" Version="1.10.0" />
-    <PackageReference Include="Newtonsoft.Json.Bson">
-      <Version>1.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="OpenTelemetry.Exporter.Console">
-      <Version>0.4.0-beta.2</Version>
-    </PackageReference>
-    <PackageReference Include="SharpZipLib">
-      <Version>1.2.0</Version>
-    </PackageReference>
-    <Reference Include="System.Data.Entity" />
-    <PackageReference Include="DotNetEnv">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Owin">
-      <Version>5.2.7</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media">
-      <Version>1.2.0.850</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory">
-      <Version>5.2.7</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect">
-      <Version>6.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>3.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Owin.Hosting">
-      <Version>4.1.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\packages\microsoft.skype.bots.media\1.19.0.25-alpha\src\skype_media_lib\*">
-      <Visible>false</Visible>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RecordingBot.Model\RecordingBot.Model.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<Platforms>x64</Platforms>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+		<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="Microsoft.Skype.Internal.Media.H264">
+			<HintPath>..\packages\microsoft.skype.bots.media\1.19.0.25-alpha\src\skype_media_lib\Microsoft.Skype.Internal.Media.H264.dll</HintPath>
+		</Reference>
+		<Reference Include="System.Data.Entity" />
+		<Reference Include="System.Runtime.Serialization" />
+	</ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+		<Reference Include="System" />
+		<Reference Include="System.Data" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Azure.Messaging.EventGrid" Version="4.21.0" />
+		<PackageReference Include="Microsoft.Identity.Client" Version="4.58.0" />
+		<PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.3.0" />
+		<PackageReference Include="NAudio" Version="2.2.1" />
+		<PackageReference Include="Newtonsoft.Json.Bson">
+			<Version>1.0.2</Version>
+		</PackageReference>
+		<PackageReference Include="OpenTelemetry.Exporter.Console">
+			<Version>1.6.0</Version>
+		</PackageReference>
+		<PackageReference Include="SharpZipLib">
+			<Version>1.4.2</Version>
+		</PackageReference>
+		<Reference Include="System.Data.Entity" />
+		<PackageReference Include="DotNetEnv">
+			<Version>2.5.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.AspNet.WebApi.Owin">
+			<Version>5.3.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables">
+			<Version>6.0.1</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json">
+			<Version>6.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection">
+			<Version>6.0.1</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
+			<Version>6.0.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Graph.Communications.Calls.Media">
+			<Version>1.2.0.7270</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect">
+			<Version>6.33.0</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Owin.Hosting">
+			<Version>4.2.2</Version>
+		</PackageReference>
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="..\packages\microsoft.skype.bots.media\1.19.0.25-alpha\src\skype_media_lib\*">
+			<Visible>false</Visible>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RecordingBot.Model\RecordingBot.Model.csproj" />
+	</ItemGroup>
 </Project>
