--- a/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
+++ b/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
@@ -13,6 +13,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.EventGrid" Version="4.21.0" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.3.0" />
 		<PackageReference Include="NAudio" Version="2.2.1" />
 		<PackageReference Include="Newtonsoft.Json.Bson">
@@ -27,29 +28,8 @@
 		<PackageReference Include="DotNetEnv">
 			<Version>2.5.0</Version>
 		</PackageReference>
-		<PackageReference Include="Microsoft.AspNet.WebApi.Owin">
-			<Version>5.3.0</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables">
-			<Version>6.0.1</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json">
-			<Version>6.0.0</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection">
-			<Version>6.0.1</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
-			<Version>6.0.0</Version>
-		</PackageReference>
 		<PackageReference Include="Microsoft.Graph.Communications.Calls.Media">
 			<Version>1.2.0.7270</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect">
-			<Version>6.33.0</Version>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Owin.Hosting">
-			<Version>4.2.2</Version>
 		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
