--- a/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
+++ b/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0.0" />   
     <PackageReference Include="System.Text.Json" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Abstractions" Version="6.32.1.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
