--- a/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
+++ b/Samples/PublicSamples/RecordingBot/src/RecordingBot.Services/RecordingBot.Services.csproj
@@ -12,12 +12,17 @@
 		<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
 	</PropertyGroup>
 	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.EventGrid" Version="4.21.0" />
+		<PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.27.0.2-alpha" />
 		<PackageReference Include="NAudio" Version="2.2.1" />
 		<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.6.0" />
 		<PackageReference Include="SharpZipLib" Version="1.4.2" />
 		<PackageReference Include="DotNetEnv" Version="2.5.0" />
-		<PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.7270" />
+		<PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.9212" />
 	</ItemGroup>
 
 	<ItemGroup>
