--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
@@ -10,10 +10,10 @@ scale:
 host: null
 
 image:
-  domain: null
+  registry: null
+  name: null
+  tag: null
   pullPolicy: IfNotPresent
-  name: ""
-  tag: ""
 
 ingress:
   tls:
