--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
@@ -31,5 +31,5 @@ spec:
 {{- end }}
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: {{ .Chart.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: ingress-nginx 
