Add helm allow Snippet Annotations

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/values.yaml
@@ -67,6 +67,7 @@ resources: {}
 ingress-nginx:
   namespaceOverride: "ingress-nginx"
   controller:
+    allowSnippetAnnotations: true
     replicaCount: 1
     nodeSelector:
       "kubernetes.io/os": linux
