Create ingressClass per deployment for multiple instances running in one cluster

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/deployment.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/deployment.yaml
@@ -121,7 +121,7 @@ spec:
       volumes:
       - name: certificate
         secret:
-          secretName: ingress-tls
+          secretName: {{ include "ingress.tls.secretName" . }}
       imagePullSecrets:
       - name: acr-secret
   selector:
