--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
@@ -16,9 +16,9 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.3.5
+version: 1.3.6
 
-# This is the version number of the application being deployed. This version number should be
+# This is the version number of the application being deployed. T --his version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 1.2.3
