--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
@@ -1,10 +1,10 @@
 {{- $maxCount := include "maxCount" . -}}
 {{- $namespace := include "ingress-nginx.namespace" . -}}
-{{- $fullName := include "fullName" . -}}
+{{- $fullName := include "ingress-nginx.fullname" . -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ $fullName }}-ingress-nginx-controller
+  name: {{ $fullName }}-external
   namespace: {{ $namespace }}
   labels:
     helmVersion: {{ .Chart.Version }}
@@ -31,5 +31,5 @@ spec:
 {{- end }}
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: {{ $fullName }}
-    app.kubernetes.io/name: ingress-nginx 
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/name: {{ include "ingress-nginx.name" .}}
