fix cluster-issuer typo

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/cluster-issuer.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/cluster-issuer.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: {{ $email }}
     privateKeySecretRef:
-      name: {{ $fullName }}-Issuer
+      name: {{ $fullName }}-issuer
     solvers:
     - http01:
         ingress:
