--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/cluster-issuer.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/cluster-issuer.yaml
@@ -1,9 +1,11 @@
 {{- $fullName := include "fullName" . -}}
 {{- $email := include "cluster-issuer.email" . -}}
+{{- $namespace := include "namespace" . -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ $fullName }}-issuer
+  namespace: {{ $namespace }}
   labels:
     helmVersion: {{ .Chart.Version }}
     helmAppVersion: {{ .Chart.AppVersion }}
