--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/Chart.yaml
@@ -18,13 +18,14 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 1.3.6
 
-# This is the version number of the application being deployed. T --his version number should be
+# This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: 1.2.3
+appVersion: 1.2.4
 
 dependencies:
   - name: ingress-nginx
     version: 4.8.3
     repository: https://kubernetes.github.io/ingress-nginx
     alias: ingress-nginx
+    condition: ingress-nginx.enabled
