--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/ingressclass.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/ingressclass.yaml
@@ -1,4 +1,5 @@
 {{- $fullName := include "ingress-nginx.fullname" . -}}
+{{- if (index $.Values "ingress-nginx" "enabled") -}}
 apiVersion: networking.k8s.io/v1
 kind: IngressClass
 metadata:
@@ -9,3 +10,4 @@ metadata:
   name: {{ $fullName }}
 spec:
   controller: "k8s.io/{{$fullName}}"
+{{- end -}}
