Fix lint errors

--- a/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
+++ b/Samples/PublicSamples/RecordingBot/deploy/teams-recording-bot/templates/external.yaml
@@ -15,7 +15,7 @@ spec:
   externalTrafficPolicy: Cluster
   loadBalancerIP: {{ include "publicIP" . }}
   ports:
-{{- if (index $.Values "ingress-ngnix" "enabled") -}}
+{{- if (index $.Values "ingress-nginx" "enabled") }}
   - name: http
     port: {{ $.Values.public.http }}
     targetPort: http
@@ -24,7 +24,7 @@ spec:
     port: {{ $.Values.public.https }}
     targetPort: https
     protocol: TCP
-{{- end -}}
+{{- end }}
 {{- range $i, $e := until (int $maxCount) }}
   - name: {{ $.Values.public.media | add $i }}-tcp
     port: {{ $.Values.public.media | add $i }}
@@ -33,5 +33,5 @@ spec:
 {{- end }}
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: {{ include "ingress-nginx.include" . }}
+    app.kubernetes.io/instance: {{ include "ingress-nginx.instance" . }}
     app.kubernetes.io/name: {{ include "ingress-nginx.name" .}}
