--- a/Samples/PublicSamples/RecordingBot/src/RecordingBot.Tests/RecordingBot.Tests.csproj
+++ b/Samples/PublicSamples/RecordingBot/src/RecordingBot.Tests/RecordingBot.Tests.csproj
@@ -6,11 +6,13 @@
 		<PlatformTarget>x64</PlatformTarget>
 		<Platforms>x64</Platforms>
 		<LangVersion>latest</LangVersion>
+        <IsTestProject>true</IsTestProject>
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Moq" Version="4.20.70" />
-		<PackageReference Include="NUnit" Version="3.14.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+		<PackageReference Include="NSubstitute" Version="5.1.0" />
+		<PackageReference Include="NUnit" Version="4.1.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
