--- a/.github/workflows/PublicSamples/RecordingBot/publicrecordingbot_codeql.yml
+++ b/.github/workflows/PublicSamples/RecordingBot/publicrecordingbot_codeql.yml
@@ -1,10 +1,18 @@
-name: "CodeQL"
+name: "Recording Bot CodeQL"
 
 on:
   push:
-    branches: ["main"]
+    branches: 
+      - main
+      - master
+    paths:
+      - Samples/PublicSamples/RecordingBot/**
   pull_request:
-    branches: ["main"]
+    branches: 
+      - main
+      - master
+    paths:
+      - Samples/PublicSamples/RecordingBot/**
   schedule:
     - cron: "24 5 * * 5"
 
