--- a/.github/workflows/PublicSamples/RecordingBot/publicrecordingbot_release-docker-image.yml
+++ b/.github/workflows/PublicSamples/RecordingBot/publicrecordingbot_release-docker-image.yml
@@ -1,14 +1,19 @@
-name: main
+name: Recording Bot Release Docker Image
 
 on:
   push:
     branches:
       - main
-      - testrelease
+      - master
+    paths:
+      - Samples/PublicSamples/RecordingBot/**
 
 jobs:
   build-push-cr:
     runs-on: windows-2022
+
+    permissions:
+      packages: write
 
     defaults:
       run:
@@ -23,7 +28,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Tag docker image
         shell: bash
