--- a/Samples/PublicSamples/RecordingBot/src/RecordingBot.Console/RecordingBot.Console.csproj
+++ b/Samples/PublicSamples/RecordingBot/src/RecordingBot.Console/RecordingBot.Console.csproj
@@ -1,20 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<OutputType>Exe</OutputType>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PlatformTarget>x64</PlatformTarget>
-		<Platforms>x64</Platforms>
-		<LangVersion>latest</LangVersion>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <OutputType>Exe</OutputType>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <PlatformTarget>x64</PlatformTarget>
+        <Platforms>x64</Platforms>
+        <LangVersion>latest</LangVersion>
+        <Nullable>disable</Nullable>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Content Include=".env" Condition="Exists('.env')">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
+    <ItemGroup>
+        <Content Include=".env" Condition="Exists('.env')">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\RecordingBot.Services\RecordingBot.Services.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\RecordingBot.Services\RecordingBot.Services.csproj" />
+    </ItemGroup>
 </Project>
