--- a/Samples/V1.0DeltaRosterSample/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
+++ b/Samples/V1.0DeltaRosterSample/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
@@ -58,11 +58,14 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.10115" TargetFramework="net472"/>
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.10115" TargetFramework="net472" />
     <PackageReference Include="Microsoft.Owin.Hosting" Version="4.2.2" />
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.26.0.94-alpha" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2.0" />
-    <PackageReference Include="System.Text.Json" Version="7.0.1" />
+    <PackageReference Include="System.Text.Encodings.Web">
+      <Version>8.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
     <Reference Include="System.Data.Entity" />
   </ItemGroup>
   <ItemGroup>
