--- a/Samples/Common/Sample.Common/Sample.Common.csproj
+++ b/Samples/Common/Sample.Common/Sample.Common.csproj
@@ -10,12 +10,13 @@
   <Import Project="$(MSBuildThisFileDirectory)..\..\Graph.props" />
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.5304" />
+    <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.10563" />
+    <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.10563" />
+    <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0.10563" />
+    <PackageReference Include="Microsoft.Graph.Communications.Core.Calls" Version="1.1.0-prerelease.2237" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.0.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0.3742" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
