--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/FrontEnd/AVPFrontEnd.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/FrontEnd/AVPFrontEnd.csproj
@@ -65,6 +65,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
     <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.3742" />
+    <PackageReference Include="Microsoft.Graph.Communications.Client">
+      <Version>1.2.0.5304</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Owin.Host.HttpListener">
       <Version>4.2.2</Version>
     </PackageReference>
