reverted code changes as per pr comments

--- a/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
@@ -75,9 +75,16 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="BuiltProjectOutputGroupDependencies" DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)" Returns="@(BuiltProjectOutputGroupDependency)">
-    <ItemGroup>
-      <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');&#xD;&#xA;                                              @(ReferenceDependencyPaths->'%(FullPath)');&#xD;&#xA;                                              @(NativeReferenceFile->'%(FullPath)');&#xD;&#xA;                                              @(_DeploymentLooseManifestFile->'%(FullPath)');&#xD;&#xA;                                              @(ResolvedIsolatedComModules->'%(FullPath)')" />
-    </ItemGroup>
+  <Target
+	  Name="BuiltProjectOutputGroupDependencies"
+	  DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)"
+	  Returns="@(BuiltProjectOutputGroupDependency)">
+	  <ItemGroup>
+	    <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');
+                                              @(ReferenceDependencyPaths->'%(FullPath)');
+                                              @(NativeReferenceFile->'%(FullPath)');
+                                              @(_DeploymentLooseManifestFile->'%(FullPath)');
+                                              @(ResolvedIsolatedComModules->'%(FullPath)')"/>
+	  </ItemGroup>
   </Target>
 </Project>
