--- a/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
+++ b/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
@@ -82,9 +82,16 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="BuiltProjectOutputGroupDependencies" DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)" Returns="@(BuiltProjectOutputGroupDependency)">
+  <Target
+    Name="BuiltProjectOutputGroupDependencies"
+    DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)"
+    Returns="@(BuiltProjectOutputGroupDependency)">
     <ItemGroup>
-      <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');&#xD;&#xA;                                              @(ReferenceDependencyPaths->'%(FullPath)');&#xD;&#xA;                                              @(NativeReferenceFile->'%(FullPath)');&#xD;&#xA;                                              @(_DeploymentLooseManifestFile->'%(FullPath)');&#xD;&#xA;                                              @(ResolvedIsolatedComModules->'%(FullPath)')" />
+      <BuiltProjectOutputGroupDependency Include="@(ReferenceCopyLocalPaths->'%(FullPath)');
+                                              @(ReferenceDependencyPaths->'%(FullPath)');
+                                              @(NativeReferenceFile->'%(FullPath)');
+                                              @(_DeploymentLooseManifestFile->'%(FullPath)');
+                                              @(ResolvedIsolatedComModules->'%(FullPath)')"/>
     </ItemGroup>
   </Target>
 </Project>
