--- a/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
+++ b/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
@@ -1,19 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DD039F57-C237-4CAD-9B35-686FC5F5A026}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sample.PolicyRecordingBot.FrontEnd</RootNamespace>
-    <AssemblyName>Sample.PolicyRecordingBot.FrontEnd</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
+	<PropertyGroup>
+	  <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	  <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+	  <ProjectGuid>{DD039F57-C237-4CAD-9B35-686FC5F5A026}</ProjectGuid>
+	  <OutputType>Library</OutputType>
+	  <AppDesignerFolder>Properties</AppDesignerFolder>
+	  <RootNamespace>Sample.PolicyRecordingBot.FrontEnd</RootNamespace>
+	  <AssemblyName>Sample.PolicyRecordingBot.FrontEnd</AssemblyName>
+	  <TargetFramework>net6.0</TargetFramework>
+	  <FileAlignment>512</FileAlignment>
+
+		<AssemblyTitle>FrontEnd</AssemblyTitle>
+		<Company>Microsoft Corporation</Company>
+		<Product>FrontEnd</Product>
+		<Copyright>Copyright © Microsoft Corporation 2017. All rights reserved.</Copyright>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<FileVersion>1.0.0.0</FileVersion>
+		<WarningLevel>0</WarningLevel>
+		<NoWarn>SA1200</NoWarn>
+		<NoWarn>SA1600</NoWarn>
+		<NoWarn>SA*</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -23,6 +30,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+	  <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -31,42 +39,25 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+	  <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Bot\Bot.cs" />
-    <Compile Include="Bot\BotMediaStream.cs" />
-    <Compile Include="Bot\CallHandler.cs" />
-    <Compile Include="Bot\ExceptionExtensions.cs" />
-    <Compile Include="Http\ExceptionLogger.cs" />
-    <Compile Include="SampleConstants.cs" />
-    <Compile Include="Http\Controllers\DemoController.cs" />
-    <Compile Include="Http\Controllers\HttpRouteConstants.cs" />
-    <Compile Include="Http\Controllers\PlatformCallController.cs" />
-    <Compile Include="Http\HttpConfigurationInitializer.cs" />
-    <Compile Include="Http\LoggingMessageHandler.cs" />
-    <Compile Include="IConfiguration.cs" />
-    <Compile Include="LRUCache.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service.cs" />
-    <Compile Include="Utilities.cs" />
-  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Skype.Internal.Media.H264, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Microsoft.Skype.Bots.Media\1.19.0.25-alpha\src\skype_media_lib\Microsoft.Skype.Internal.Media.H264.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Microsoft.Skype.Bots.Media\1.26.0.94-alpha\src\skype_media_lib\Microsoft.Skype.Internal.Media.H264NetCore.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.3.0" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0-beta.9995" TargetFramework="net472" />
-    <PackageReference Include="Microsoft.Owin.Hosting" Version="4.2.2" />
-    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.27.0.2-alpha" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.WebApiCompatShim" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Owin" Version="6.0.36" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.10563" />
+    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.26.0.94-alpha" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Text.Encodings.Web">
-      <Version>8.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json" Version="8.0.4" />
-    <Reference Include="System.Data.Entity" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
+	<PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
+	<Reference Include="System.Data.Entity" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Common\Sample.Common.Beta\Sample.Common.Beta.csproj">
@@ -74,5 +65,7 @@
       <Name>Sample.Common</Name>
     </ProjectReference>
   </ItemGroup>
+	<!--
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+-->
 </Project>
