--- a/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
+++ b/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/CRWorkerRole.csproj
@@ -1,21 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
   <PropertyGroup>
+	<RoleType>Worker</RoleType>
+	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+	<ProjectGuid>{EAF11F22-C267-4C02-820D-12B622FEBFC1}</ProjectGuid>
+	<OutputType>Library</OutputType>
+	<AppDesignerFolder>Properties</AppDesignerFolder>
+	<RootNamespace>Sample.PolicyRecordingBot.WorkerRole</RootNamespace>
+	<AssemblyName>Sample.PolicyRecordingBot.WorkerRole</AssemblyName>
+	  <TargetFramework>net6.0</TargetFramework>
+	<FileAlignment>512</FileAlignment>
+	<NuGetPackageImportStamp>
+	</NuGetPackageImportStamp>
+	  <NoWarn>NU1701</NoWarn>
+  </PropertyGroup>
+	
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
     <RoleType>Worker</RoleType>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EAF11F22-C267-4C02-820D-12B622FEBFC1}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sample.PolicyRecordingBot.WorkerRole</RootNamespace>
     <AssemblyName>Sample.PolicyRecordingBot.WorkerRole</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyTitle>WorkerRole</AssemblyTitle>
+    <Company>Microsoft Corporation</Company>
+    <Product>WorkerRole</Product>
+    <Copyright>Copyright © Microsoft Corporation 2017. All rights reserved.</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
+  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
@@ -35,27 +50,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Services.Client" Version="5.8.5" />
     <PackageReference Include="Microsoft.Owin.Host.HttpListener" Version="4.2.2" />
-    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.27.0.2-alpha" />
-    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.26.0.94-alpha" />
+    
+	  <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.16.1" />
     <PackageReference Include="Microsoft.WindowsAzure.SDK" Version="2.9.0" />
-    <PackageReference Include="System.Text.Encodings.Web">
-      <Version>8.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json" Version="8.0.4" />
-    <PackageReference Include="WindowsAzure.Storage">
-      <Version>9.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.Collections.Immutable">
-      <Version>8.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3"/>
+    <PackageReference Include="System.Collections.Immutable" Version="8.0.0"/>
     <Reference Include="MonAgentListener, Version=33.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Configuration" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AzureConfiguration.cs" />
-    <Compile Include="ConfigurationException.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkerRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -81,8 +84,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+	<!--
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
+-->
   <Target
     Name="BuiltProjectOutputGroupDependencies"
     DependsOnTargets="$(BuiltProjectOutputGroupDependenciesDependsOn)"
