--- a/Samples/Common/Sample.Common/Sample.Common.csproj
+++ b/Samples/Common/Sample.Common/Sample.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+    <TargetFrameworks>net60</TargetFrameworks>
     <RootNamespace>Sample.Common</RootNamespace>
     <AssemblyName>Sample.Common</AssemblyName>
     <Platforms>AnyCPU;x64</Platforms>
